[project]
name = "beatnet-ort-reimpl"
version = "0.1.0"
description = "Standalone ONNX Runtime toolkit for BeatNet CRNN."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "onnx>=1.21.0",
    "onnxruntime>=1.24.4",
    "torch>=2.11.0",
]

[project.optional-dependencies]
audio = [
    "librosa>=0.11.0",
    "madmom>=0.16.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
